--- a/ansible/roles/rhacm-ztp-platform-upgrade-setup/tasks/main.yml
+++ b/ansible/roles/rhacm-ztp-platform-upgrade-setup/tasks/main.yml
@@ -38,6 +38,8 @@
     name: upgrade-graph_fast-4.13
   - url: https://api.openshift.com/api/upgrades_info/v1/graph?channel=fast-4.14
     name: upgrade-graph_fast-4.14
+  - url: https://api.openshift.com/api/upgrades_info/v1/graph?channel=fast-4.15
+    name: upgrade-graph_fast-4.15
 
 - name: Get list of clusters for upgrade
   shell: |
