Allow the rest of the du profile to be disabled

--- a/ansible/roles/rhacm-ztp-setup/templates/policy-kustomization.yaml
+++ b/ansible/roles/rhacm-ztp-setup/templates/policy-kustomization.yaml
@@ -2,48 +2,65 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 generators:
 # This is common to all RAN deployments
+{% if setup_ztp_common_policy %}
 - common-ranGen.yaml
-{% if du_profile_version is version('4.15', '>=') %}
-# This is common for MNO (Multi-Node OpenShift) RAN deployments (3-node and standard clusters)
+{%   if du_profile_version is version('4.15', '>=') %}
+# This is common for MNO (Multi-Node OpenShift) RAN deployments (3-node and standard clusters) du >= 4.15
 - common-mno-ranGen.yaml
+{%   endif %}
+{% else %}
+# - common-ranGen.yaml
+# This is common for MNO (Multi-Node OpenShift) RAN deployments (3-node and standard clusters) du >= 4.15
+# - common-mno-ranGen.yaml
 {% endif %}
+
 # This group policy is for all single-node deployments:
+{% if setup_ztp_sno_policy %}
 - group-du-sno-ranGen.yaml
 # This group validator policy is for all single-node deployments:
-{% if setup_ztp_enable_performanceprofile %}
+{%   if setup_ztp_enable_performanceprofile %}
 - group-du-sno-validator-ranGen.yaml
-{% else %}
+{%   else %}
 # - group-du-sno-validator-ranGen.yaml
-{% endif %}
+{%   endif %}
 # This site policy is for all clusters with the label scalelab
-{% if setup_ztp_sno_site_policy %}
+{%   if setup_ztp_sno_site_policy %}
 - sno-site.yaml
+{%   else %}
+# - sno-site.yaml
+{%   endif %}
 {% else %}
+# - group-du-sno-ranGen.yaml
+# This group validator policy is for all single-node deployments:
+# - group-du-sno-validator-ranGen.yaml
+# This site policy is for all clusters with the label scalelab
 # - sno-site.yaml
 {% endif %}
+
 # This group policy is for all compressed 3-node cluster deployments:
 {% if setup_ztp_compact_policy %}
 - group-du-3node-ranGen.yaml
 # This group validator policy is for all compressed 3-node cluster deployments:
-{% if setup_ztp_enable_performanceprofile %}
+{%   if setup_ztp_enable_performanceprofile %}
 - group-du-3node-validator-ranGen.yaml
-{% else %}
+{%   else %}
 # - group-du-3node-validator-ranGen.yaml
-{% endif %}
+{%   endif %}
 {% else %}
 # - group-du-3node-ranGen.yaml
 # This group validator policy is for all compressed 3-node cluster deployments:
 # - group-du-3node-validator-ranGen.yaml
 {% endif %}
+
 # This group policy is for all standard cluster deployments:
 {% if setup_ztp_standard_policy %}
 - group-du-standard-ranGen.yaml
 # This group validator policy is for all standard cluster deployments:
-{% if setup_ztp_enable_performanceprofile %}
+{%   if setup_ztp_enable_performanceprofile %}
 - group-du-standard-validator-ranGen.yaml
-{% else %}
+{%   else %}
 # - group-du-standard-validator-ranGen.yaml
-{% endif %}
+{%   endif %}
 {% else %}
 # - group-du-standard-ranGen.yaml
 # This group validator policy is for all standard cluster deployments:
