--- a/ansible/roles/rhacm-deploy/defaults/main.yml
+++ b/ansible/roles/rhacm-deploy/defaults/main.yml
@@ -1,8 +1,9 @@
 ---
-# rhacm-hub-deploy default vars
+# rhacm-deploy default vars
 
-rhacm_deploy_repo: https://github.com/stolostron/deploy.git
-rhacm_deploy_repo_branch: master
+acm_default_channel: release-2.13
+
+mch_name: multiclusterhub
 
 rhacm_search_storageclass: localstorage2-sc
 # Irrelevent when the PV provided will be larger anyway, applies to OBS PVs too
