--- a/ansible/roles/rhacm-deploy/tasks/main.yml
+++ b/ansible/roles/rhacm-deploy/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
-# acm-hub-deploy tasks - Install ACM from operatorhub on a cluster
+# rhacm-deploy tasks - Install ACM from operatorhub on a cluster
 
 - name: Create directory for ACM Operator
   file:
-    path: "{{ install_directory }}/acm-deploy"
+    path: "{{ install_directory }}/rhacm-deploy"
     state: directory
 
 - name: Create ACM manifests
@@ -12,13 +12,13 @@
     dest: "{{ item.dest }}"
   loop:
   - src: acm-operator.yaml.j2
-    dest: "{{ install_directory }}/acm-deploy/acm-operator.yaml"
+    dest: "{{ install_directory }}/rhacm-deploy/acm-operator.yaml"
   - src: mch.yaml.j2
-    dest: "{{ install_directory }}/acm-deploy/mch.yaml"
+    dest: "{{ install_directory }}/rhacm-deploy/mch.yaml"
 
 - name: Apply ACM Operator manifest
   shell: |
-    KUBECONFIG={{ hub_cluster_kubeconfig }} oc apply -f {{ install_directory }}/acm-deploy/acm-operator.yaml
+    KUBECONFIG={{ hub_cluster_kubeconfig }} oc apply -f {{ install_directory }}/rhacm-deploy/acm-operator.yaml
 
 - name: Wait until ACM Operator CSV is succeeded
   shell: |
@@ -30,7 +30,7 @@
 
 - name: Apply MCH manifest
   shell: |
-    KUBECONFIG={{ hub_cluster_kubeconfig }} oc apply -f {{ install_directory }}/acm-deploy/mch.yaml
+    KUBECONFIG={{ hub_cluster_kubeconfig }} oc apply -f {{ install_directory }}/rhacm-deploy/mch.yaml
 
 - name: Wait until MultiClusterHub is Running
   shell: |
