--- a/ansible/roles/rhacm-downstream-deploy/defaults/main.yml
+++ b/ansible/roles/rhacm-downstream-deploy/defaults/main.yml
@@ -1,9 +1,8 @@
 ---
-# acm-hub-deploy default vars
+# rhacm-downstream-deploy default vars
 
-acm_default_channel: release-2.13
-
-mch_name: multiclusterhub
+rhacm_deploy_repo: https://github.com/stolostron/deploy.git
+rhacm_deploy_repo_branch: master
 
 rhacm_search_storageclass: localstorage2-sc
 # Irrelevent when the PV provided will be larger anyway, applies to OBS PVs too
