--- a/ansible/roles/telco-core-manifests/defaults/main.yml
+++ b/ansible/roles/telco-core-manifests/defaults/main.yml
@@ -3,3 +3,14 @@
 
 telco_core_clusterinstance_extra_manifests: false
 telco_core_clusterinstance_custom_manifests: false
+
+# Manifest must exist in acm-deploy-load directory in order to be added to the extra-manifests configmap
+telco_core_extra_manifests:
+- control-plane-load-kernel-modules.yaml
+- kdump-master.yaml
+- kdump-worker.yaml
+- mc_rootless_pods_selinux.yaml
+- mount_namespace_config_master.yaml
+- mount_namespace_config_worker.yaml
+- sctp_module_mc.yaml
+- worker-load-kernel-modules.yaml
