--- a/ansible/roles/telco-core-ztp/templates/policy-baseline-application.yaml
+++ b/ansible/roles/telco-core-ztp/templates/policy-baseline-application.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: policy-telco-core-baseline
+  name: policy-telco-core
   namespace: openshift-gitops
 spec:
   destination:
