--- a/ansible/roles/telco-core-ztp/templates/policy-kustomization.yaml
+++ b/ansible/roles/telco-core-ztp/templates/policy-kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 generators:
 - core-baseline.yaml
-# - core-overlay.yaml
+- core-overlay.yaml
 # - core-upgrade.yaml
 
 resources:
