--- a/ansible/roles/telco-core-ztp/templates/release-4.18/ns.yaml
+++ b/ansible/roles/telco-core-ztp/templates/release-4.18/ns.yaml
@@ -2,4 +2,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: ztp-core-cluster
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: ztp-core-policies
