--- a/ansible/roles/telco-core-ztp/defaults/main.yml
+++ b/ansible/roles/telco-core-ztp/defaults/main.yml
@@ -3,3 +3,7 @@
 
 # Currently only the 4.18 profile has been placed and adjusted for this testing in this repo
 telco_core_profile_version: 4.18
+
+# Enable means uncommented, so false means comment out for now
+telco_core_cluster_logging_version_enable: false
+telco_core_cluster_logging_version: cluster-logging.v6.0.0
