--- a/ansible/roles/telco-core-ztp/tasks/main.yml
+++ b/ansible/roles/telco-core-ztp/tasks/main.yml
@@ -28,10 +28,10 @@
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
   loop:
-  - src: cluster-ns-application.yaml
-    dest: "{{ install_directory }}/rhacm-ztp/cnf-features-deploy/ztp/gitops-subscriptions/argocd/cluster-applications/ztp-core.yaml"
-  - src: policy-baseline-application.yaml
-    dest: "{{ install_directory }}/rhacm-ztp/cnf-features-deploy/ztp/gitops-subscriptions/argocd/policy-applications/ztp-core.yaml"
+  - src: cluster-application.yaml
+    dest: "{{ install_directory }}/rhacm-ztp/cnf-features-deploy/ztp/gitops-subscriptions/argocd/cluster-applications/ztp-core-cluster.yaml"
+  - src: policy-application.yaml
+    dest: "{{ install_directory }}/rhacm-ztp/cnf-features-deploy/ztp/gitops-subscriptions/argocd/policy-applications/ztp-core-policies.yaml"
 
 # https://github.com/openshift-kni/telco-reference/tree/release-4.18/telco-core/configuration
 - name: Template Telco Core Profile policy manifests into cnf-features-deploy
