--- a/ansible/roles/telco-core-ztp/defaults/main.yml
+++ b/ansible/roles/telco-core-ztp/defaults/main.yml
@@ -4,6 +4,13 @@
 # Currently only the 4.18 profile has been placed and adjusted for this testing in this repo
 telco_core_profile_version: 4.18
 
-# Enable means uncommented, so false means comment out for now
+# Enable overriding the clusterlogging subscription reference CR channel
+telco_core_reference_cluster_logging_channel_override_enable: true
+telco_core_reference_cluster_logging_channel_override: stable-6.1
+
+# Enabling a cluster logging version refers to enabling a specific target version for
+# the cluster logging operator status to be compliant with. Setting as false means the
+# version will be commented and your policy will be compliant regardless of the version
+# of the cluster logging operator installed.
 telco_core_cluster_logging_version_enable: false
 telco_core_cluster_logging_version: cluster-logging.v6.0.0
