--- a/ansible/roles/telco-core-ztp/templates/policy-kustomization.yaml
+++ b/ansible/roles/telco-core-ztp/templates/policy-kustomization.yaml
@@ -2,11 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 generators:
 - core-baseline.yaml
-# Overlay commented out until template-value ConfigMaps completed
-# - core-overlay.yaml
+- core-overlay.yaml
 # - core-upgrade.yaml
 
 resources:
 - ns.yaml
-# - template-values/regional.yaml
-# - template-values/hw-types.yaml
+- template-values/regional.yaml
+- template-values/hw-types.yaml
